@@ -212,6 +212,7 @@ private:
   std::map<std::string, bool> m_typeInclude;  // each type alias will be read in 
                                               // and true if we convert that type
   std::list<std::string> m_src_filter;
+  bool m_unknown_src_ok;
   std::list<std::string> m_type_filter;
   std::list<std::string> m_key_filter; 
 
